# AMR

./: .env  .gitignore  AMR_config.bash  API_ENDPOINTS.md  CODEBASE_STRUCTURE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.MD  ROS2_PYTHON_REACT_ARCHITECTURE.md  ROS2_QUICKSTART_EXAMPLE.py  openapi.yaml  package-lock.json  package.json  postman_collection.json  run.sh  y
RL/: README.md
SHOBOT_AMR_ws/src/shobot_api_bridge/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_api_bridge/launch/: api_bridge_launch.py  mission_api_bridge_launch.py
SHOBOT_AMR_ws/src/shobot_api_bridge/resource/: shobot_api_bridge
SHOBOT_AMR_ws/src/shobot_api_bridge/scripts/: api_bridge
SHOBOT_AMR_ws/src/shobot_api_bridge/shobot_api_bridge/: __init__.py  api_bridge.py  mission_api_bridge.py
SHOBOT_AMR_ws/src/shobot_bringup/: CMakeLists.txt  README.md  package.xml
SHOBOT_AMR_ws/src/shobot_bringup/launch/: shobot_full_bringup.launch.py
SHOBOT_AMR_ws/src/shobot_costmap_safety_layer/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_costmap_safety_layer/launch/: shobot_costmap_safety_layer_launch.py
SHOBOT_AMR_ws/src/shobot_costmap_safety_layer/resource/: shobot_costmap_safety_layer
SHOBOT_AMR_ws/src/shobot_costmap_safety_layer/shobot_costmap_safety_layer/: __init__.py  node.py
SHOBOT_AMR_ws/src/shobot_description/: CMakeLists.txt  package.xml
SHOBOT_AMR_ws/src/shobot_description/config/: shobot_urdf.yaml
SHOBOT_AMR_ws/src/shobot_description/launch/: shobot_sim.launch.py
SHOBOT_AMR_ws/src/shobot_description/rviz/: shobot_sim.rviz
SHOBOT_AMR_ws/src/shobot_description/urdf/: rack.urdf  shobot_description.xacro  shobot_description_gazebo.xacro  shobot_description_materials.xacro  shobot_description_params.xacro  square_rack.urdf  vlMarker.urdf
SHOBOT_AMR_ws/src/shobot_dock_detection/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_dock_detection/launch/: dock_detection_launch.py
SHOBOT_AMR_ws/src/shobot_dock_detection/resource/: shobot_dock_detection
SHOBOT_AMR_ws/src/shobot_dock_detection/shobot_dock_detection/: __init__.py  dock_detection_node.py
SHOBOT_AMR_ws/src/shobot_docking/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_docking/action/: Dock.action
SHOBOT_AMR_ws/src/shobot_docking/launch/: shobot_docking_launch.py
SHOBOT_AMR_ws/src/shobot_docking/resource/: shobot_docking
SHOBOT_AMR_ws/src/shobot_docking/shobot_docking/: __init__.py  node.py
SHOBOT_AMR_ws/src/shobot_dynamic_param_server/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_dynamic_param_server/launch/: dynamic_param_server_launch.py
SHOBOT_AMR_ws/src/shobot_dynamic_param_server/resource/: shobot_dynamic_param_server
SHOBOT_AMR_ws/src/shobot_dynamic_param_server/shobot_dynamic_param_server/: __init__.py  dynamic_param_server_node.py
SHOBOT_AMR_ws/src/shobot_fsm/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_fsm/launch/: shobot_fsm_launch.py
SHOBOT_AMR_ws/src/shobot_fsm/resource/: shobot_fsm
SHOBOT_AMR_ws/src/shobot_fsm/shobot_fsm/: __init__.py  node.py
SHOBOT_AMR_ws/src/shobot_localization_reset/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_localization_reset/launch/: localization_reset_launch.py
SHOBOT_AMR_ws/src/shobot_localization_reset/resource/: shobot_localization_reset
SHOBOT_AMR_ws/src/shobot_localization_reset/shobot_localization_reset/: __init__.py
SHOBOT_AMR_ws/src/shobot_log_recorder/: CMakeLists.txt  README.md  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_log_recorder/launch/: log_recorder_launch.py
SHOBOT_AMR_ws/src/shobot_log_recorder/resource/: shobot_log_recorder
SHOBOT_AMR_ws/src/shobot_log_recorder/shobot_log_recorder/: log_recorder_node.py
SHOBOT_AMR_ws/src/shobot_navigation_server/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_navigation_server/launch/: shobot_navigation_server_launch.py
SHOBOT_AMR_ws/src/shobot_navigation_server/resource/: shobot_navigation_server
SHOBOT_AMR_ws/src/shobot_navigation_server/shobot_navigation_server/: __init__.py  node.py
SHOBOT_AMR_ws/src/shobot_navigation_server/srv/: Navigate.srv
SHOBOT_AMR_ws/src/shobot_rl_agent/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_rl_agent/launch/: shobot_rl_agent_launch.py  shobot_rl_intent_launch.py  shobot_rl_speed_launch.py
SHOBOT_AMR_ws/src/shobot_rl_agent/resource/: shobot_rl_agent
SHOBOT_AMR_ws/src/shobot_rl_agent/shobot_rl_agent/: __init__.py  node.py  shobot_rl_agent.py  shobot_rl_intent.py  shobot_rl_speed.py
SHOBOT_AMR_ws/src/shobot_robot_pose_publisher/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_robot_pose_publisher/launch/: shobot_robot_pose_publisher_launch.py
SHOBOT_AMR_ws/src/shobot_robot_pose_publisher/resource/: shobot_robot_pose_publisher
SHOBOT_AMR_ws/src/shobot_robot_pose_publisher/scripts/: shobot_robot_pose_publisher_node
SHOBOT_AMR_ws/src/shobot_robot_pose_publisher/shobot_robot_pose_publisher/: __init__.py  node.py
SHOBOT_AMR_ws/src/shobot_sensors/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_sensors/resource/: shobot_sensors
SHOBOT_AMR_ws/src/shobot_sensors/shobot_sensors/: battery_monitor.py  (+2 more)
SHOBOT_AMR_ws/src/shobot_status_aggregator/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_system_monitor/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_teleop/: CMakeLists.txt  README.md  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_tf_static/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_trajectory_controller/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
SHOBOT_AMR_ws/src/shobot_yolo_detection/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
(+1040 files in other folders)
