<?xml version="1.0"?>
<package format="3">
  <name>shobot_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro description and Gazebo launch for SHOBOT AMR.</description>
  <maintainer email="shobot@example.com">shobot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
