<?xml version="1.0"?>
<package format="3">
  <name>shobot_dynamic_param_server</name>
  <version>0.1.0</version>
  <description>Dynamic parameter server for live tuning (speed limits, safety, costmap, laser filters, Nav2 replanning).</description>
  <maintainer email="todo@example.com">SHOBOT</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
