<?xml version="1.0"?>
<package format="3">
  <name>shobot_system_monitor</name>
  <version>0.1.0</version>
  <description>Heartbeat / liveness monitor for SHOBOT (CPU, memory, sensors, nodes).</description>
  <maintainer email="todo@example.com">SHOBOT</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
