<?xml version="1.0"?>
<package format="3">
  <name>shobot_tf_static</name>
  <version>0.1.0</version>
  <description>Static TF2 broadcaster for SHOBOT frames.</description>
  <maintainer email="todo@example.com">SHOBOT</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
